# Hypefuse

nemoscene/: Cargo.toml  sync_data.sh  update_nemoscene.sh
nemoscene/data/bundles/clock/app/: index.html
nemoscene/data/bundles/clock/config/: bundle  clock
nemoscene/data/bundles/google_api/config/: bundle
nemoscene/data/bundles/google_calendar/app/: index.html
nemoscene/data/clock/app/: index.html
nemoscene/data/clock/config/: bundle  clock
nemoscene/data/clock/lib/: fittext.js
nemoscene/data/configuration/: nemoscene
nemoscene/data/configuration/widgets/: clock
nemoscene/data/google_api/config/: bundle
nemoscene/data/google_api/lib/: lib.js
nemoscene/data/google_calendar/app/: index.html
nemoscene/data/google_calendar/config/: bundle  calendars  login  settings
nemoscene/data/settings/app/: index.html  pwa_manifest.json
nemoscene/data/settings/config/: bundle
nemoscene/data/settings/lib/: lib.js  style.css
nemoscene/data/silvertree/config/: bundle
nemoscene/data/silvertree/lib/: lib.js  silvertree_app.css
nemoscene/data/system/config/: bundle
nemoscene/data/weather/app/: index.html
nemoscene/data/weather/config/: bundle  settings
nemoscene/data/widgets/config/: bundle  clock  google_calendar  weather
nemoscene/data/wifi/config/: KoviLori  POCO X3 NFC  bundle  idk
nemoscene/src/: configuration.rs  main.rs  network.rs  system_state.rs
nemoscene/src/app/: manager.rs  mod.rs
nemoscene/src/dashboard/: dashboard_script.js  dashboard_style.css  mod.rs  view.rs
nemoscene/src/server/: http.rs  mod.rs  threadpool.rs
(+4 files in other folders)
