[package]
name = "nemoscene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.2"
html-to-string-macro = "0.2.5"
log = "0.4.20"
once_cell = "1.19.0"
http_req = "0.10.3"
openssl-sys = {  version = "0.9.102", features = ["vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.9"
url-escape = "0.1.1"
walkdir = "2.5.0"
